--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gala-layoutpw-plugin (6.1.0-1) bullseye; urgency=medium
+
+  * added libmutter-8 support (Mutter 40)
+
+ -- dirli <litandrej85@gmail.com>  Sat, 21 Aug 2021 03:02:15 +0300
+
 gala-layoutpw-plugin (6.0.0-1) bullseye; urgency=medium
 
   * added libmutter-7 support (Mutter 3.38)
